b=463968 test_wav_ended1.html can fail on slow machines with no audio hardware. r+sr=roc